2011-03-18  Julien Danjou  <julien@danjou.info>

	* gnus-util.el (gnus-buffer-live-p): Simplify gnus-buffer-live-p.
	(gnus-buffer-live-p): Check that buffer is not nil.

2011-03-17  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* gnus.el: No Gnus v0.15 is released.

2011-03-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* time-date.el (format-seconds): Use assoc instead of assoc-string to
	avoid warning on XEmacs.

	* dgnushack.el: Bind help-echo-owns-message to avoid a compiler warning
	on XEmacs.

	* gnus-art.el: Require mouse, which the build bot seems to say is
	needed.

	* dgnushack.el: Define url-retrieve-synchronously unless not defined.

	* gravatar.el (gravatar-retrieve-synchronously): Use `url-retrieve' on
	XEmacs, since it doesn't have url-retrieve-synchronously.

	* time-date.el (format-seconds): Use assoc instead of assoc-string,
	since assoc-string doesn't exist in XEmacs.

2011-03-17  Antoine Levitt  <antoine.levitt@gmail.com>

	* gnus-group.el (gnus-group-list-ticked): New function.
	(gnus-group-make-menu-bar): Provide a menu entry for it.
	(gnus-group-list-map): Provide a binding for it.

2011-03-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-visit-file): New command.

	* nnimap.el (nnimap-fetch-inbox): Rewrite slightly last patch.

2011-03-17  Bjørn Mork  <bjorn@mork.no>

	* nnimap.el (nnimap-fetch-inbox): Don't download bodies on ver4-capable
	servers.

2011-03-16  Julien Danjou  <julien@danjou.info>

	* mm-uu.el (mm-uu-dissect-text-parts): Only dissect handle that are
	inline.

	* gnus-art.el (article-hide-list-identifiers): Use
	gnus-group-get-list-identifiers.

	* gnus-sum.el (gnus-group-get-list-identifiers): New function.
	(gnus-summary-remove-list-identifiers): Use
	gnus-group-get-list-identifiers to get regexp.
	(gnus-select-newsgroup, gnus-summary-insert-subject)
	(gnus-summary-insert-articles): Call
	gnus-summary-remove-list-identifiers unconditionally.

2011-03-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>
