@@ -1,3 +1,15 @@
+2011-03-21  Julien Danjou  <julien@danjou.info>
+
+	* mm-view.el (mm-display-inline-fontify):
+	* gnus-sum.el (gnus-summary-save-parts-1):
+	* gnus-art.el (gnus-article-browse-html-save-cid-content)
+	(gnus-article-browse-html-parts, gnus-mime-delete-part)
+	(gnus-mime-copy-part, gnus-mime-inline-part, gnus-insert-mime-button):
+	Use `mm-handle-filename'.
+
+	* mm-util.el (mm-handle-filename): New function, return the filename of
+	an handle.
+
 2011-03-18  Julien Danjou  <julien@danjou.info>
 
 	* gnus-util.el (gnus-buffer-live-p): Simplify gnus-buffer-live-p.
